k8s/deployment.yaml
apiVersion: v1
items:
# ----------- NAMESPACE -------------
- apiVersion: v1
  kind: Namespace
  metadata:
    labels:
      kubernetes.io/metadata.name: ${NAMESPACE}-${CI_ENVIRONMENT_NAME}
    name: ${NAMESPACE}-${CI_ENVIRONMENT_NAME}
# ----------- CONFIGMAP -------------
- apiVersion: v1
  data:
    XPTO: "false"
  kind: ConfigMap
  metadata:
    name: ${CI_PROJECT_NAME}
    namespace: ${NAMESPACE}-${CI_ENVIRONMENT_NAME}
# ----------- SERVICE -------------
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/targetWorkloadIds: '["${NAMESPACE}-${CI_ENVIRONMENT_NAME}/${CI_PROJECT_NAME}"]'
      management.cattle.io/ui-managed: "true"
    name: ${CI_PROJECT_NAME}
    namespace: ${NAMESPACE}-${CI_ENVIRONMENT_NAME}
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 80
    selector:
      workload.user.cattle.io/workloadselector: apps.deployment-${NAMESPACE}-${CI_ENVIRONMENT_NAME}-${CI_PROJECT_NAME}
    sessionAffinity: None
    type: ClusterIP
# ----------- DEPLOYMENT -------------
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      workload.user.cattle.io/workloadselector: apps.deployment-${NAMESPACE}-${CI_ENVIRONMENT_NAME}-${CI_PROJECT_NAME}
    name: ${CI_PROJECT_NAME}
    namespace: ${NAMESPACE}-${CI_ENVIRONMENT_NAME}
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        workload.user.cattle.io/workloadselector: apps.deployment-${NAMESPACE}-${CI_ENVIRONMENT_NAME}-${CI_PROJECT_NAME}
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          workload.user.cattle.io/workloadselector: apps.deployment-${NAMESPACE}-${CI_ENVIRONMENT_NAME}-${CI_PROJECT_NAME}
      spec:
        affinity: {}
        containers:
        - envFrom:
          - configMapRef:
              name: ${CI_PROJECT_NAME}
              optional: false
          image: ${IMAGE_TAG}
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /index.html
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: container-0
          ports:
          - containerPort: 8080
            name: http-8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /index.html
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /index.html
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: gitlab
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: ${CI_PROJECT_NAME}
          name: vol-cfgmp-${CI_PROJECT_NAME}
#-------------REGISTRY PULL SECRET -----------
- apiVersion: v1
  data:
    .dockerconfigjson: ${K8S_PULL_SECRET}
  kind: Secret
  metadata:
    name: gitlab
    namespace: ${NAMESPACE}-${CI_ENVIRONMENT_NAME}
  type: kubernetes.io/dockerconfigjson
#-------------INGRESS------------
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt
    name: ${CI_PROJECT_NAME}
    namespace: ${NAMESPACE}-${CI_ENVIRONMENT_NAME}
  spec:
    ingressClassName: nginx
    rules:
    - host: ${INGRESS_HOST}
      http:
        paths:
        - backend:
            service:
              name: ${CI_PROJECT_NAME}
              port:
                number: 8080
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - ${INGRESS_HOST}
      secretName: ${INGRESS_HOST}
#---------------------
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
